# fastapi_zero

./: pyproject.toml
fastapi_zero/: app.py  schemas.py
tests/: conftest.py  test_app.py
